# graphql-client-generator

./: LICENSE  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
graphql_client_generator/: __init__.py  __main__.py  cli.py  generator.py  introspection.py  parser.py
graphql_client_generator/_runtime/: __init__.py  builder.py  client.py  model.py  query.py  serialization.py
graphql_client_generator/codegen/: __init__.py  client.py  enums.py  inputs.py  models.py  outputs.py  package.py  schema.py
tests/: conftest.py  test_cli.py  test_codegen.py  test_generator.py  test_introspection.py  test_parser.py  test_runtime_builder.py  test_runtime_client.py  test_runtime_model.py  test_runtime_query.py  test_runtime_serialization.py
