[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "graphql-client-generator"
dynamic = ["version"]
description = "Generate typed Python clients from GraphQL schemas"
requires-python = ">=3.10"
dependencies = ["graphql-core>=3.2", "requests>=2.0"]

[project.scripts]
graphql-client-generator = "graphql_client_generator.cli:main"

[tool.hatch.version]
source = "vcs"

[tool.hatch.envs.default]
dependencies = [
    "pytest",
    "pytest-cov",
    "requests",
    "mypy",
    "ruff",
    "types-requests",
]

[tool.hatch.envs.default.scripts]
tests = [
    "unit-test",
    "lint",
]
unit-test = "pytest tests/ -v --cov=graphql_client_generator --cov-report=term-missing"
format = [
    "ruff check --fix .",
    "ruff format .",
]
lint = [
    "ruff check .",
    "ruff format --check",
    "mypy graphql_client_generator",
]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM", "TCH"]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["B018"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = ["graphql", "graphql.*"]
ignore_missing_imports = true

[tool.coverage.run]
omit = ["graphql_client_generator/__main__.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
